--- a/ToDo/appsettings.json.example
+++ b/ToDo/appsettings.json.example
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:{server-name}.database.windows.net,1433;Initial Catalog=dotnetclassdb;Persist Security Info=False;User ID={user};Password={password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=localdatabase.db"
   },
   "Logging": {
     "LogLevel": {
